lesson 22 with ClassWork

--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,9 @@
         <testng.version>7.11.0</testng.version>
         <webdrivermanager.version>5.9.2</webdrivermanager.version>
         <selenium-java.version>4.28.1</selenium-java.version>
+        <lombok.version>1.18.36</lombok.version>
 
     </properties>
-
-
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -47,6 +46,13 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>${hamcrest.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
