--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <webdrivermanager.version>5.9.3</webdrivermanager.version>
         <selenium-java.version>4.28.1</selenium-java.version>
         <lombok.version>1.18.36</lombok.version>
-        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
         <aspectjweaver.version>1.9.22</aspectjweaver.version>
         <allure-maven.version>2.10.0</allure-maven.version>
         <allure-testng.version>2.28.1</allure-testng.version>
@@ -32,7 +32,8 @@
             <version>${maven-surefire-plugin.version}</version>
             <configuration>
                 <argLine>
-                    -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.22/aspectjweaver-1.9.22.jar -Xmx256m
+                    -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.22/aspectjweaver-1.9.22.jar
+                    -Xmx256m
                 </argLine>
             </configuration>
             <dependencies>
